<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dip">


  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    
      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email_address"
        android:paddingTop="3dip"
      />
      
      <LinearLayout android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px" />
      
      <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:nextFocusUp="@id/email_address"
        android:nextFocusLeft="@id/email_address"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />


      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:paddingTop="3dip"
      />
      <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />
      
      <CheckBox android:id="@+id/show_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:onClick="onCheckboxClicked" />


      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_imap_address"
        android:paddingTop="3dip"
      />
      <EditText
        android:id="@+id/imap_server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imap_hint"
        android:inputType="textUri" />

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_smtp_address"
        android:paddingTop="3dip"
      />
      <EditText
        android:id="@+id/smtp_server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smtp_hint"
        android:inputType="textUri" />
      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_security_type"
        android:paddingTop="3dip"
      />
      <Spinner
        android:id="@+id/security_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>
  </ScrollView>
</RelativeLayout>