<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dip">

  <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
  
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
  
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email_address"
        android:paddingTop="3dip"
      />
      <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:paddingTop="3dip"
      />
      <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_initial_email_num"
        android:paddingTop="3dip"
      />
      <Spinner
        android:id="@+id/initial_emails_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
  </ScrollView>
  </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <Button
            android:id="@+id/save_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="saveAccountSettings" />
        
        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/delete"
            android:onClick="deleteAccountSettings" />
      </LinearLayout>
      
  
<!--  <Button
    android:id="@+id/save_account_button"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:text="@string/save"
    android:onClick="saveAccountSettings" />
  
  <Button
    android:id="@+id/delete_account_button"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:text="@string/delete"
    android:onClick="deleteAccountSettings" />-->
</RelativeLayout>